...
  const MyHomePage({Key? key}) : super(key: key);

  @override
  State<MyHomePage> createState() => _MyHomePageState();
}

TextEditingController nameReController = TextEditingController(text: 'Timur');
TextEditingController loginReController =
    TextEditingController(text: 'gr.timurik2001@gmail.com');
TextEditingController lastNameReController =
    TextEditingController(text: 'Gruzkov');
TextEditingController phoneREController =
    TextEditingController(text: '89872788468');

TextEditingController loginController =
    TextEditingController(text: 'gr.timurik2001@gmail.com');
TextEditingController phoneController =
    TextEditingController(text: '89872788468');

...
                                        80,
                                height:
                                    (MediaQuery.of(context).size.height / 100) *
                                        8,
                                child: TextField(
                                  controller: loginController,
                                  key: Key('loginController'),
                                  maxLines: 2,
                                  style: TextStyle(
                                    fontSize: 20,
                                  ),
                                  decoration: InputDecoration(
                                    filled: true,
...
                                    (MediaQuery.of(context).size.width / 100) *
                                        80,
                                height:
                                    (MediaQuery.of(context).size.height / 100) *
                                        8,
                                child: TextFormField(
                                  key: Key('phoneController'),
                                  keyboardType: TextInputType.number,
                                  inputFormatters: <TextInputFormatter>[
                                    FilteringTextInputFormatter.digitsOnly
                                  ],
                                  controller: phoneController,
                                  maxLines: 2,
...
                                        80,
                                height:
                                    (MediaQuery.of(context).size.height / 100) *
                                        8,
                                child: TextField(
                                  controller: nameReController,
                                  key: Key('nameReController'),
                                  maxLines: 2,
                                  style: TextStyle(
                                    fontSize: 20,
                                  ),
                                  decoration: InputDecoration(
                                    filled: true,
...
                                    (MediaQuery.of(context).size.width / 100) *
                                        80,
                                height:
                                    (MediaQuery.of(context).size.height / 100) *
                                        8,
                                child: TextField(
                                  key: Key('lastNameReController'),
                                  controller: lastNameReController,
                                  maxLines: 2,
                                  style: TextStyle(
                                    fontSize: 20,
                                  ),
                                  decoration: InputDecoration(
...
